--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "yaml-path",
-  "displayName": "YAML path",
-  "description": "Displays the key path to the line your cursor is on in the status bar.",
+  "name": "yaml-path-robot-dicts",
+  "displayName": "YAML path for robot tests",
+  "description": "Allows to copy the path for a YAML variable in the format of Robot framework dictionary reference",
   "version": "0.0.1",
-  "publisher": "smoore",
+  "publisher": "smohylevskyi",
   "icon": "icon.png",
-  "repository": "https://github.com/sm-moore/yaml-path",
+  "repository": "https://github.com/smohylevskyi/yaml-path-robot-format",
   "engines": {
     "vscode": "^1.72.0"
   },
